--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,3 +8,13 @@ repos:
 
       - id: mixed-line-ending
         args: [ --fix=lf ]
+
+  - repo: local
+    hooks:
+      - id: luacheck
+        name: luacheck
+        language: system
+        entry: luacheck
+        types: [lua]
+        args: [-q]
+        always_run: true
