--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,3 @@
 name = smartshop
 description = A smarter and easier shop
-optional_depends = currency, default, mesecons, mesecons_mvps, petz, pipeworks, tubelib
+optional_depends = currency, default, mesecons, mesecons_mvps, petz, node_entity_queue, pipeworks, tubelib
