Add digiline receive and send mechanism

--- a/mod.conf
+++ b/mod.conf
@@ -9,4 +9,4 @@ version = 2024-02-08
 min_minetest_version = 5.8.0
 supported_games = *
 depends = fmod, futil
-optional_depends = currency, default, mesecons, mesecons_mvps, petz, node_entity_queue, pipeworks, tubelib
+optional_depends = currency, default, digilines, mesecons, mesecons_mvps, petz, node_entity_queue, pipeworks, tubelib
